[tool.poetry]
name = "climtech"
version = "2.2.0"
description = "The climtech's site"
authors = ["Torchbox <hello@torchbox.com>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{ include = "climtech" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
django = "~5.0.6"
wagtail = "~6.2.2"
psycopg2 = "~2.9.10"
gunicorn = "~23.0.0"
dj-database-url = "~2.3.0"
django-basic-auth-ip-whitelist = "~0.6"
django-manifest-loader = "~1.0.0"
django-pattern-library = "~1.2.0"
django-permissions-policy = "~4.22"
django-referrer-policy = "~1.0"
django-storages = { version = "~1.14", extras = ["s3"] }
markdown = "~3.7"
pygments = "~2.18"
requests = "~2.32.3"
scout-apm = "~3.2"
sentry-sdk = "~2.17"
wagtail-font-awesome-svg = "~1.0.1"
wagtail-color-panel = "~1.4.1"
wagtail-cache = "~2.5.1"
wagtail-autocomplete = "~0.11.0"
wagtailmedia = "~0.15.2"
django-redis = "~5.4"
channels = "~4.0.0"
uvicorn = "~0.30.5"
django-environ = "~0.11.2"
loguru = "~0.7.2"
opentelemetry-api = "~1.28.2"
opentelemetry-sdk = "~1.28.2"
opentelemetry-exporter-otlp = "~1.28.2"
opentelemetry-instrumentation-django = "~ 0.49b2"
opentelemetry-instrumentation-wsgi = "~0.49b2"
opentelemetry-instrumentation-asgi = "~0.49b2"
opentelemetry-instrumentation-requests = "~0.49b2"
opentelemetry-instrumentation-redis = "~0.49b2"
opentelemetry-instrumentation-psycopg2 = "~0.49b2"

[tool.poetry.group.dev.dependencies]
black = "24.10.0"
djhtml = "3.0.7"
flake8 = "7.1.1"
flake8-assertive = "2.1.0"
flake8-blind-except = "0.2.1"
flake8-comprehensions = "3.15.0"
isort = "5.13.2"
pre-commit = "4.0.1"
